updated phone ui and fixed some bugs when it came to adding new items in phone mode, still need to get the gyro to work for phone view but requires more testing and a non iphone phone

--- a/gtvr/frontend/static/frontend/less/main.less
+++ b/gtvr/frontend/static/frontend/less/main.less
@@ -260,11 +260,11 @@ body {
 .admin-panel-deactive{
     display: none;
 }
-.sticky-panel{
-    position: -webkit-sticky; /* Safari */
-    position: sticky;
-    top: 0; 
-}
+// .sticky-panel{
+//     position: -webkit-sticky; /* Safari */
+//     position: sticky;
+//     top: 0; 
+// }
 
 
 .lessonDashboard__div-Main{
@@ -375,14 +375,21 @@ body {
     justify-content: space-evenly;
     text-align: center;
 }
-.LessonSingle__title{
+.LessonSingle__container-info{
     order: 1;
+    flex: 1 1 100%;
+    color: grey;
+    justify-content: center;
+}
+
+.LessonSingle__title{
+    order: 2;
     flex: 1 1 100%;
     font-size: 1.5rem;
 }
 .LessonSingle__video-controls{
     background-color: @quad-color;
-    order: 2;
+    order: 3;
     width: 30%;
     display: flex;
     flex-direction: column;
@@ -413,7 +420,7 @@ body {
     }
 }
 .LessonSingle__video-card{
-    order: 3;
+    order: 4;
     align-content: center;
     background-color: black;
     border: solid 4px @primary-color-comp;
@@ -522,28 +529,91 @@ body {
     }
 
     .lessonDashboard__div-Area{
-        display: flex;
-        flex-wrap: wrap;
+        display: grid;
+        grid-gap: 0.5rem;
+        grid-template-columns: auto 20% 1fr auto;
+        grid-template-rows: 1fr;
+        grid-template-areas: ". lessonAreaPanel lessonAreaMain ."; 
     }
 
+    .lessonDashboard__div-Main{
+        border-left: solid 5px @primary-color-comp;
+    }
+    .lessonDashboard__div-container{
+        padding: 0;
+    }
     .lessonDashboard__div-Side{
-        flex: 1 1;
+        // flex: 1 1;
         border-right: none;
-        border-bottom: solid 12px @primary-color-comp;
+        border-bottom: none;
+        padding-right: 0;
     }
 
     .PanelButton__container{
-        max-height: auto;
-        padding: 0.4rem;
-        width: 98%;
+        max-height: 50%;
+        padding: 0;
+        width: 100%;
         display: flex;
         flex-direction: column;
-        justify-content: space-around;
+        justify-content: flex-start;
     }
+    .PanelButton{
+        flex: 1;
+        display: flex;
+        flex-wrap: wrap;
+        min-height: 1rem;
+        height: 2rem;
+        width: 100%;
+        border: none;
+        border-bottom: solid 3px @primary-color;
+        border-radius: 0;
+        background-color: @quad-color-comp;
+        background: rgba(25, 43, 148, 0.233);
+        opacity: 0.5; 
+        text-align: center;
+        margin-bottom: 1rem;   
+    }
+    .PanelButton-top{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-content: center;
+        align-items: center;
+        span{
+            font-size: 1.2rem;
+        }
+        .PanelButton-top-name{
+            font-size: 0.8rem;
+            text-emphasis: italic;
+            padding-top: 1.5rem;
+        }
+    }
+    .active-panel{
+        background-color: @quad-color-comp;
+        opacity: 1;
+    }
+
+    .lessonLesson__div-container{
+        padding: 0;
+        width: 90%;
+    }
+    .lessonLesson__card{
+        width: 100%;
+        margin: 0;
+        margin-left: 0.5rem;
+    }
+    .lessonLesson__card-container{
+        padding: 0;
+    }
+
 
     .LessonSingle__container{
         //min-height: 10rem;
         flex: 1 1 100%;
+    }
+
+    .LessonSingle__video-controls-buttons{
+        width: 100%;
     }
 }
 
